# genDockerImage

./: CMakeLists.txt  README.md  build.cpp  cleanup.cpp  genDockerfile.cpp  writeFiles.sh
dockerfiles/: Dockerfile_mkl_mpich_gcc-4_8_3  Dockerfile_mkl_mpich_gcc-4_8_5  Dockerfile_mkl_mpich_gcc-4_9_3  Dockerfile_mkl_mpich_gcc-5_4_0  Dockerfile_mkl_mpich_gcc-6_4_0  Dockerfile_mkl_mvapich_gcc-4_8_3  Dockerfile_mkl_mvapich_gcc-4_8_5  Dockerfile_mkl_mvapich_gcc-4_9_3  Dockerfile_mkl_mvapich_gcc-5_4_0  Dockerfile_mkl_mvapich_gcc-6_4_0  Dockerfile_mpich_gcc-4_8_3  Dockerfile_mpich_gcc-4_8_5  Dockerfile_mpich_gcc-4_9_3  Dockerfile_mpich_gcc-5_4_0  Dockerfile_mpich_gcc-6_4_0  Dockerfile_mvapich_gcc-4_8_3  Dockerfile_mvapich_gcc-4_8_5  Dockerfile_mvapich_gcc-4_9_3  Dockerfile_mvapich_gcc-5_4_0  Dockerfile_mvapich_gcc-6_4_0
